typos and formatting

--- a/src/content/recent.html
+++ b/src/content/recent.html
@@ -9,8 +9,9 @@
                             So I have written many sites using ASP .NET and to be honest, I am bored.  I even 
                             created a site using the "new", at the time of this writing, .NET Core 2.2
                             and Angular 6.0 project.  I did enjoy working with the lean .NET Core framework
-                            but it was just still more of the same.  
-                            <br /> 
+                            but it was just still more of the same.
+                        </p>  
+                        <p>
                             It reminds me of when I went backpacking 
                             through Europe for the first time with my brother and friend.  When we landed and 
                             got over the jet lag, we did the usual tourist things in London and then started 
@@ -18,7 +19,7 @@
                             not speak English.  We wanted something different.  So, that is no dig on London, nor 
                             am I dissing .NET.  But like I said, I got bored and wanted something different and new.
                         </p>
-                            <h3>Artitechtual Decisions</h3>
+                            <h3>Architectural Decisions</h3>
                         <p>
                             I mentioned my on, off and on again relationship with Javascript in this site's intro, and I 
                             recently began working on a project that is built on a .NET Core Razor Pages framework,
@@ -77,16 +78,16 @@
                             lecture by Jimmy Bogard.  There are a bunch out there, just do a 
                             search <a href="https://www.google.com/search?q=Jimmy+Bogard+Verticls+Slice+Architecture" target="_blank">Jimmy Bogard Verticls Slice Architecture</a>.
                             Or his own site has a short <a href="https://jimmybogard.com/vertical-slice-architecture/" target="_blank">article</a>.
-                            <br />
-                            <br />
+                        </p>
+                        <p>
                             After watching and getting a good understanding we began a new effort to update and consolidate 
                             a large amout of site pages into dashboards.  Instead of the usual n tier architecture we broke up
                             our site into "feature modules."  Each feature module was a completely separate project
                             so nothing was shared.  With this approach we were able to have smaller releases.  This meant 
                             quicker turn around from our QA team, less complexity and developers could work 
                             without stepping on eachother.
-                            <br />
-                            <br />
+                        </p>
+                        <p>
                             Since we are not currently performing any commands, just queries, I have not been able to 
                             fully see the pros and cons of this approach.  But for what we have done so far I think the part 
                             I like the most is that as a developer I get to write more of my own code.  Instead of 
@@ -95,8 +96,8 @@
                             There is a tendency to make every component from a feature module a generic shared 
                             component.  We are early on in this development effort and I can already see some components 
                             growing too complex, but we will figure that out soon enough.
-                            <br />
-                            <br />
+                        </p>
+                        <p>
                             In short, I recommend at least watching a presentation or reading about Verticle Slices on 
                             Jimmy's site.  It has been around for a while so there are plenty of opinions out 
                             there as well.  In his demo he uses <a href="https://github.com/jbogard/MediatR" target="_blank">MediatR</a>. 
