--- a/src/content/recent.html
+++ b/src/content/recent.html
@@ -71,12 +71,12 @@
         <div class="col-sm-12">
             <article>
                 <div class="article">
-                    <h1>Jimmy Bogard - Verticls Slice Architecture.</h1>
+                    <h1>Jimmy Bogard - Vertical Slice Architecture.</h1>
                     <div class="content">
                         <p> 
                             So a few months ago at the office I was asked to watch this video 
                             lecture by Jimmy Bogard.  There are a bunch out there, just do a 
-                            search <a href="https://www.google.com/search?q=Jimmy+Bogard+Verticls+Slice+Architecture" target="_blank">Jimmy Bogard Verticls Slice Architecture</a>.
+                            search <a href="https://www.google.com/search?q=Jimmy+Bogard+Vertical+Slice+Architecture" target="_blank">Jimmy Bogard Vertical Slice Architecture</a>.
                             Or his own site has a short <a href="https://jimmybogard.com/vertical-slice-architecture/" target="_blank">article</a>.
                         </p>
                         <p>
