--- a/src/content/professional.html
+++ b/src/content/professional.html
@@ -43,6 +43,33 @@
     </div>
 </div>
 
-
+<div id="misc-why-not" class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <article>
+                <div class="article">
+                    <h1>Why isn't this documented?</h1>
+                    <div class="content">
+                        <p>
+                            Ok, so some of these things are documented, but perhaps hard 
+                            to find.  Just quick thoughts here, things I keep forgetting so I'm 
+                            writing them down, etc.
+                        </p>
+                        <h4>Git Hints</h4>
+                        <h5>Undo working copy modifications of one file in Git?</h5>
+<pre>
+<code>git checkout -- file
+git checkout v1.2.3 -- file         # tag v1.2.3
+git checkout stable -- file         # stable branch
+git checkout origin/master -- file  # upstream master
+git checkout HEAD -- file           # the version from the most recent commit
+git checkout HEAD^ -- file          # the version before the most recent commit</code>
+</pre>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </div>
+</div>
 
 
