--- a/src/content/patterns.html
+++ b/src/content/patterns.html
@@ -25,28 +25,55 @@
     </div>
 </div>
 
-<div id="favorite-patterns" class="container">
+<div id="common-patterns" class="container">
     <div class="row">
         <div class="col-sm-12">
             <article>
                 <div class="article">
-                    <h1>Favorite Patterns</h1>
+                    <h1>Common Patterns</h1>
                     <div class="content">
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <h3>heading three</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        <p> 
+                            Early on in my career I did not think about patterns.  For a while 
+                            I just followed in the patterns that the more senior developers 
+                            had chosen.  After a while, these patterns became my go to, but 
+                            I still had not read about patterns, nor did I know that the pattern 
+                            that I was using had a name.  Then I began to become more intentional 
+                            in my approach.  I started with "the simplest and most common patters..."
+                        </p>
+                            <h3>Design Patterns : Elements of Reusable Object-Oriented Software</h3>
+                        <p>
+                            <ul>
+                                <li>Abstract Factory</li>
+                                <b>Intent</b> - Provide an interface for creating families of related or dependent object 
+                                without specifying their concrete classes.<br />
+                                <b>Also Known As</b> - Kit
+                                <li>Adapter</li>
+                                <b>Intent</b> - Convert the interface of a class into another interface clients expect. 
+                                Adapter lets classes work together that couldn't otherwise because of incompatible interfaces.<br />
+                                <b>Also Known As</b> - Wrapper
+                                <li>Composite</li>
+                                <b>Intent</b> - Compose objects into tree structures to represent part-whole hierarchies. 
+                                Composite lets clients treat individual objects and compositions of objects uniformly.
+                                <li>Decorator</li>
+                                <b>Intent</b> - Attach additional responsibilities to an object dynamically. 
+                                Decorators provide a flexible alternative to subclassing for extending functionality.
+                                <b>Also Known As</b> - Wrapper
+                                <li>Factory Method</li>
+                                <b>Intent</b> - Define an interface for creating an object, but let subclasses decide which class to instantiate.  
+                                Factory Method lets a class defer instantiation to subclasses.
+                                <b>Also Known As</b> - Virtual Constructor
+                                <li>Observer</li>
+                                <b>Intent</b> - Define a one-to-many dependency between objects so that when one object changes state, 
+                                all its dependents are notified and updates automatically.
+                                <b>Also Known As</b> - Dependents, Publish-Subscribe
+                                <li>Strategy</li>
+                                <b>Intent</b> - Define a family of algorithms, encapsulate each one, and make them interchangeable. 
+                                Strategy lets the algorithm vary independently from clients that use it.
+                                <b>Also Known As</b> - Policy
+                                <li>Template Method</li>
+                                <b>Intent</b> - Define the skeleton of an algorithm in an operation, deferring some steps to subclasses. 
+                                Template Method lets subclasses redefine certain steps of an algorithm without changing the algorithm's structure.
+                            </ul>
                         </p>
                     </div>
                 </div>
@@ -55,32 +82,37 @@
     </div>
 </div>
 
-<div id="common-patterns" class="container">
-    <div class="row">
-        <div class="col-sm-12">
-            <article>
-                <div class="article">
-                    <h1>Common Patterns</h1>
-                    <div class="content">
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <h3>heading three</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        </p>
+<div id="favorite-patterns" class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <article>
+                    <div class="article">
+                        <h1>Favorite Patterns</h1>
+                        <div class="content">
+                            <p> 
+                                Below are just a few of my favorite patters with a brief reason:
+                            </p>
+                            <p>Facade: So this pattern was probably the first that I can remember 
+                                and the lead developer at the time referred to it as a Wrapper.  This led to a 
+                                bit of confusion on my part because there are two other patterns (Adapter and Decorator) 
+                                that are also referred to as a Wrapper.  But he was not referring to 
+                                the same term.  Just that it wrapped around a more complex process.  The term 
+                                does make sense.
+                            </p>
+                            <p>
+                                Factory: There are many different types of factories.  I have used this one a 
+                                lot so it is one of my favorites.
+                            </p>
+                            <p>
+                                Singleton: Simple and straightforward.  
+                            </p>
+                            <p>
+                                Observer: I first saw this one working on my first Federal contract. I haven't seen 
+                                it implemented since but it stuck with me.
+                            </p>
+                        </div>
                     </div>
-                </div>
-            </article>
+                </article>
+            </div>
         </div>
     </div>
-</div>
