--- a/src/content/patterns.html
+++ b/src/content/patterns.html
@@ -38,41 +38,89 @@
                             had chosen.  After a while, these patterns became my go to, but 
                             I still had not read about patterns, nor did I know that the pattern 
                             that I was using had a name.  Then I began to become more intentional 
-                            in my approach.  I started with "the simplest and most common patters..."
+                            in my approach.  I started with "the simplest and most common patterns..."
                         </p>
                             <h3>Design Patterns : Elements of Reusable Object-Oriented Software</h3>
                         <p>
                             <ul>
-                                <li>Abstract Factory</li>
-                                <b>Intent</b> - Provide an interface for creating families of related or dependent object 
-                                without specifying their concrete classes.<br />
-                                <b>Also Known As</b> - Kit
-                                <li>Adapter</li>
-                                <b>Intent</b> - Convert the interface of a class into another interface clients expect. 
-                                Adapter lets classes work together that couldn't otherwise because of incompatible interfaces.<br />
-                                <b>Also Known As</b> - Wrapper
-                                <li>Composite</li>
-                                <b>Intent</b> - Compose objects into tree structures to represent part-whole hierarchies. 
-                                Composite lets clients treat individual objects and compositions of objects uniformly.
-                                <li>Decorator</li>
-                                <b>Intent</b> - Attach additional responsibilities to an object dynamically. 
-                                Decorators provide a flexible alternative to subclassing for extending functionality.
-                                <b>Also Known As</b> - Wrapper
-                                <li>Factory Method</li>
-                                <b>Intent</b> - Define an interface for creating an object, but let subclasses decide which class to instantiate.  
-                                Factory Method lets a class defer instantiation to subclasses.
-                                <b>Also Known As</b> - Virtual Constructor
-                                <li>Observer</li>
-                                <b>Intent</b> - Define a one-to-many dependency between objects so that when one object changes state, 
-                                all its dependents are notified and updates automatically.
-                                <b>Also Known As</b> - Dependents, Publish-Subscribe
-                                <li>Strategy</li>
-                                <b>Intent</b> - Define a family of algorithms, encapsulate each one, and make them interchangeable. 
-                                Strategy lets the algorithm vary independently from clients that use it.
-                                <b>Also Known As</b> - Policy
-                                <li>Template Method</li>
-                                <b>Intent</b> - Define the skeleton of an algorithm in an operation, deferring some steps to subclasses. 
-                                Template Method lets subclasses redefine certain steps of an algorithm without changing the algorithm's structure.
+
+                                <li><h5>Abstract Factory</h5>
+                                    <ul>
+                                        <li>
+                                            <b>Intent</b> - Provide an interface for creating families of related or dependent object 
+                                            without specifying their concrete classes.<br />
+                                        </li>
+                                        <li>
+                                            <b>Also Known As</b> - Kit
+                                        </li>
+                                    </ul>
+                                </li>
+
+                                <li><h5>Adapter</h5> 
+                                    <ul>
+                                        <li>
+                                            <b>Intent</b> - Convert the interface of a class into another interface clients expect. 
+                                            Adapter lets classes work together that couldn't otherwise because of incompatible interfaces.<br />
+                                        </li>
+                                        <li>
+                                            <b>Also Known As</b> - Wrapper
+                                        </li>
+                                    </ul>
+                                </li>
+
+                                <li><h5>Composite</h5> 
+                                    <ul>
+                                        <b>Intent</b> - Compose objects into tree structures to represent part-whole hierarchies. 
+                                        Composite lets clients treat individual objects and compositions of objects uniformly.
+                                    </ul>
+                                </li>
+
+                                <li><h5>Decorator</h5> 
+                                    <ul>
+                                        <b>Intent</b> - Attach additional responsibilities to an object dynamically. 
+                                        Decorators provide a flexible alternative to subclassing for extending functionality.
+                                    </ul>
+                                    <ul>
+                                        <b>Also Known As</b> - Wrapper
+                                    </ul>
+                                </li>
+
+                                <li><h5>Factory Method</h5> 
+                                    <ul>
+                                        <b>Intent</b> - Define an interface for creating an object, but let subclasses decide which class to instantiate.  
+                                        Factory Method lets a class defer instantiation to subclasses.
+                                    </ul>
+                                    <ul>
+                                        <b>Also Known As</b> - Virtual Constructor
+                                    </ul>
+                                </li>
+
+                                <li><h5>Observer</h5>
+                                    <ul>
+                                        <b>Intent</b> - Define a one-to-many dependency between objects so that when one object changes state, 
+                                        all its dependents are notified and updates automatically.
+                                    </ul>
+                                    <ul>
+                                        <b>Also Known As</b> - Dependents, Publish-Subscribe
+                                    </ul>
+                                </li>
+
+                                <li><h5>Strategy</h5>
+                                    <ul>
+                                        <b>Intent</b> - Define a family of algorithms, encapsulate each one, and make them interchangeable. 
+                                        Strategy lets the algorithm vary independently from clients that use it.
+                                    </ul>
+                                    <ul>
+                                        <b>Also Known As</b> - Policy
+                                    </ul>
+                                </li>       
+
+                                <li><h5>Template Method</h5>
+                                    <ul>
+                                        <b>Intent</b> - Define the skeleton of an algorithm in an operation, deferring some steps to subclasses. 
+                                        Template Method lets subclasses redefine certain steps of an algorithm without changing the algorithm's structure.
+                                    </ul>
+                                </li>
                             </ul>
                         </p>
                     </div>
