url rewrite article

--- a/src/content/professional.html
+++ b/src/content/professional.html
@@ -48,14 +48,14 @@
         <div class="col-sm-12">
             <article>
                 <div class="article">
-                    <h1>Why isn't this documented?</h1>
+                    <h1>Git - Undo Single File Edits</h1>
                     <div class="content">
                         <p>
-                            Ok, so some of these things are documented, but perhaps hard 
-                            to find.  Just quick thoughts here, things I keep forgetting so I'm 
-                            writing them down, etc.
+                            I have used TFS, Subversion, Git hosted in TFS now Git 
+                            with GitHub repositories.  I prefer Git for some things, 
+                            but a GUI does make life easier.  So I need to keep notes: 
                         </p>
-                        <h4>Git Hints</h4>
+                        <h4>Git Notes</h4>
                         <h5>Undo working copy modifications of one file in Git?</h5>
 <pre>
 <code>git checkout -- file
