--- a/src/content/development.html
+++ b/src/content/development.html
@@ -36,21 +36,35 @@
                 <div class="article">
                     <h1>.NET - Why isn't this documented?</h1>
                     <div class="content">
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <h3>heading three</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        <p>
+                            It took me a little while to figure this one out. I have 
+                            used URL Rewrites and Redirects before but based off some 
+                            querystring after the domain name, not a redirect from root. If 
+                            you do a search on URL Rewrites you will find the usage of 
+                            either Regular Expressions, Wildcards or Exact Match for the 
+                            match url. The example below is for the web.config file and 
+                            the expression has a caret ^ which denotes the beginning of a string 
+                            and dollar sign $ for the end of the string.  So it is matching 
+                            the empty string.  In other words, just the domain name (i.e. http://yourdomain.com/).
+                            Change the Redirect to Rewrite and the browser URL will not be updated 
+                            so the transfer is transparent.  The rewrite may break your site 
+                            links though, such as css. So test it locally.
+                        </p>
+                            <h3>URL Redirect</h3>
+                        <p>
+<pre><code>
+    &lt;system.webServer&gt;
+        &lt;rewrite&gt;
+            &lt;rules&gt;
+                &lt;rule name="Root Redirect" stopProcessing="true"&gt;
+                    &lt;match url="^$" /&gt;
+                    &lt;action type="Redirect" url="/mySubFolder" /&gt;
+                &lt;/rule&gt;
+            &lt;/rules&gt;
+        &lt;/rewrite&gt;
+    &lt;/system.webServer&gt;
+</code>
+</pre>
                         </p>
                     </div>
                 </div>
